--- a/storefront/package.json
+++ b/storefront/package.json
@@ -54,6 +54,7 @@
     "@medusajs/client-types": "preview",
     "@medusajs/ui-preset": "preview",
     "@playwright/test": "^1.41.1",
+    "@svgr/webpack": "^8.1.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "17.0.21",
     "@types/pg": "^8.11.0",
